--- a/SIUMNI/index.html
+++ b/SIUMNI/index.html
@@ -50,7 +50,7 @@
       <div class="container-fluid py-3">
       <h1 class="display-6 fw-bold">Hello Alumni STT-NF</h1>
       <p class="col-md-8 fs-4">Sistem  Informasi Alumni STT-NF ini menyajikan Informasi terkait data-data mahasiswa yang sudah lulus dari Nurul Fikri dari berbagai tahun angkatan.</p>
-      <a href="daftar.html"><button class="btn btn-dark btn-lg" type="button">Daftar Alumni</button></a> <!--Belum-->
+      <a href="datamahasiswa.html"><button class="btn btn-dark btn-lg" type="button">Daftar Alumni</button></a> <!--Belum-->
       
       </div>
   </div>
