--- a/SIUMNI/register.html
+++ b/SIUMNI/register.html
@@ -79,7 +79,7 @@
         </table>
   
         <div class="social-auth-links text-center mb-3" style="padding-left: 15px;">
-          <a href="#" class="btn btn-block btn-primary">Daftar</a>
+          <a href="login.html" class="btn btn-block btn-primary">Daftar</a>
         </div>
       </div>
     </div>
