--- a/SIUMNI/datamahasiswa.html
+++ b/SIUMNI/datamahasiswa.html
@@ -68,7 +68,7 @@
                 <li class="nav-item" style="font-size:20px;">
                   <a class="nav-link active" href="#">
                     Dashboard Alumni
-                    <i class="fa fa-angle-down" style="padding-left: 5px;"></i>
+                    <i class="fa fa-angle-right" style="padding-left: 5px;"></i>
                   </a>
                 </li>
                 <hr>
@@ -123,10 +123,10 @@
         </label> 
       </div>
       <div class="d-flex justify-content-between flex-wrap flex-md-nowrap align-items-center pt-0 pb-2 mb-3" style="font-size: 35px;">
-        <i class="fa fa-user-plus"></i>  
+        <a href="daftar.html"><i class="fa fa-user-plus"></i></a>  
       </div>
     </main>
-    <main class="col-md-10   ms-sm-auto col-lg-10 px-md-4">
+    <main class="col-md-10 ms-sm-auto col-lg-10 px-md-4">
       <div class="d-flex justify-content-between flex-wrap flex-md-nowrap align-items-center pt-3 pb-2 mb-3">
       <table class="table table-bordered col-md-9 ms-sm-auto col-lg-10 px-md-4" style="text-align: center;">
         <thead>
